package Interface;

public interface ivehicle {

    void applyfuelPedal(double fuelPedal);
    void applyBrakes(double decrement);
    void steeringWheel(int wheelDegree);
}

