@startuml

title __M02's Class Diagram__\n

  package inheritance {
    class Main {
    }
  }
  

  package rudimentary {
    class Main {
    }
  }
  

  package Interface {
    class Main {
    }
  }
  

  package inheritance {
    class airplane {
    }
  }
  

  package rudimentary {
    class airplane {
    }
  }
  

  package inheritance {
    class car {
    }
  }
  

  package rudimentary {
    class car {
    }
  }
  

  package Interface {
    class integration {
    }
  }
  

  package Interface {
    interface ivehicle {
    }
  }
  

  package rudimentary {
    class vehicle {
    }
  }
  

  package inheritance {
    class vehicle {
    }
  }
  

  airplane -up-|> vehicle
  car -up-|> vehicle
  integration -up-|> ivehicle


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
